<resources>
    <string name="app_name">kotlin_demo</string>
    <string name="map">地圖</string>
    <string name="search">搜尋</string>
    <string name="member">會員</string>
    <string name="parking_type1">動</string>
    <string name="parking_type2">靜</string>
    <string name="service_time">服務時間</string>
    <string name="tel">聯絡電話</string>
    <string name="parking_car">小型車位</string>
    <string name="parking_motor">機車車位</string>
    <string name="parking_charge">充電車位</string>
    <string name="press2exit">再次返回退出應用</string>
    <string name="close">關閉</string>
    <string name="message">訊息</string>
    <string name="parking_entrance">入口地址</string>
    <string name="lat">緯度</string>
    <string name="lng">經度</string>
</resources>